update config, entity and repo